# oxidized_saves

./: Cargo.toml  Justfile  README.md  RoadMap.md  dummy.json  flake.nix  oxi.json  test.json
.github/workflows/: rust.yml
benches/: oxi.rs
src/: main.rs
src/config/: game.rs  mod.rs  save.rs  steam.rs
src/lib/: mod.rs
src/lib/config/: game.rs  mod.rs  save.rs  steam.rs
src/lib/settings/: mod.rs
tests/: mod.rs
