[package]
name = "oxidized_saves"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_matches = "1.5.0"
chrono = "0.4.37"
dirs = "5.0.1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
tempfile = "3.10.1"
