[package]
name = "oxidized_saves"
version = "0.1.0"
edition = "2021"
autoexamples = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "oxi"
path = "src/lib/mod.rs"

[dependencies]
assert_matches = "1.5.0"
chrono = "0.4.37"
dirs = "5.0.1"
fs_extra = "1.3.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
tempfile = "3.10.1"
